[package]
name = "test-setup"
version = "0.1.0"
authors = ["Julius de Bruijn <bruijn@prisma.io>"]
edition = "2018"

[dependencies]
once_cell = "1.3.1"
bitflags = "1.2.1"
async-trait = "0.1"
names = "0.11"
tokio = { version = "1.26", features = ["rt-multi-thread"]}
quaint-forked = { path = "..", features = ["all"] }
